force-app/main/default/objects/tc9_util__Approver_Action__c/tc9_util__Approver_Action__c.object-meta.xml
<CustomObject>
    <label>Approver Action</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Approver Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approver Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>