force-app/main/default/objects/tc9_util__Approver_Action__c/fields/tc9_util__Action__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>