force-app/main/default/objects/tc9_util__Approver_Action__c/fields/tc9_util__Comment__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Comment__c</fullName>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>