force-app/main/default/objects/tc9_util__Approver_Action__c/fields/tc9_util__Object__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timesheet</fullName>
            </value>
            <value>
                <fullName>Expense Claim</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>