force-app/main/default/objects/tc9_util__Approver_Action__c/listViews/tc9_util__All.listView-meta.xml
<ListView>
    <fullName>tc9_util__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_util__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>